@@ -7,6 +7,9 @@
 # 	drives		-- List drives to monitor. E.g. "hda hdc".
 #
 # $Log$
+# Revision 1.4  2004/11/10 16:00:39  jimmyo
+# Applied patch from Nicolas Stransky to generic/hddtemp, to fetch temp more elegantly (SF#1052845).
+#
 # Revision 1.3  2004/05/20 19:02:36  jimmyo
 # Set categories on a bunch of plugins
 #
@@ -50,5 +53,5 @@ if [ "$1" = "config" ]; then
         exit 0
 fi
 
-for a in $drives ; do printf "$a.value " ; echo "`hddtemp -q /dev/$a | cut -f 3 -d ':'`" | awk '{print $1}' ; done
+for a in $drives ; do printf "$a.value $(hddtemp -n -q /dev/$a)\n" ; done
 
